Rename query params and add swagger documentation for coupon APIs
